--- a/src/Components/css/stylePage1.css
+++ b/src/Components/css/stylePage1.css
@@ -12,8 +12,6 @@
     flex-wrap: wrap;
 }
 
-
-
 .box {
     display: flex;
     flex-wrap: wrap;
@@ -36,10 +34,21 @@
 .reviews-container {
     display: flex;
     justify-content: center;
+    margin-top: 15px;
+}
+.reviews::before {
+    display: flex;
+    align-self: center;
+    content: '<';
+}
+.reviews-container::after {
+    display: flex;
+    align-self: center;
+    content: '>';
 }
 
 .reviews {
-    width: 100vw;
+    width: 99vw;
     white-space: wrap;
     transition: transform 0.3s ease;
     display: flex;
@@ -53,6 +62,4 @@
     padding: 10%;
     max-width: 100%; /* Устанавливаем максимальную ширину для текста */
     overflow: hidden; /* Обрезаем текст, который выходит за пределы */
-
-    /* Другие стили отзыва */
 }
