--- a/src/Components/UI/Review_style.css
+++ b/src/Components/UI/Review_style.css
@@ -5,6 +5,7 @@
   border: 1px solid #ccc;
   padding: 20px;
   margin-bottom: 20px;
+  margin-top: 20px  ;
   text-align: center;
   border: none;
 
