--- a/src/Components/css/Footer.css
+++ b/src/Components/css/Footer.css
@@ -1,17 +1,22 @@
 .footer{
-    
-}
-
-.footer-top{
-    display: flex;
-    justify-content: space-between;
     background-color: #333333;
     color: white;
     padding: 2.5%;
 }
 
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-center{
+    display: flex;
+    justify-content: center;
+}
+
 .footer a {
-    color: #fff;
+    color: #999999;
+    font-size: 14px;
 }
 
 .footer-column-first{
@@ -37,3 +42,19 @@
     margin-right: 20px;
 }
 
+.footer-bottom copy {
+    color: #999999;
+    margin-left: 20px;
+}
+
+.footer-column-first h3{
+    margin-bottom: 3%;
+}
+
+.footer-column-second h3{
+    margin-bottom: 3%;
+}
+
+.footer-column-third h3{
+    margin-bottom: 3%;
+}
