--- a/src/Components/css/Menu.css
+++ b/src/Components/css/Menu.css
@@ -2,9 +2,13 @@
     padding: 0;
     display: flex;
     justify-content: space-between;
-    padding: 15px;
+    padding: 25px;
     
   }
+
+a {
+  font-size: 20px;
+}
 
 .catalog{
   display: flex;
