added category cards on the main page and updated from the database

--- a/src/Components/css/CategoryCard.css
+++ b/src/Components/css/CategoryCard.css
@@ -5,8 +5,8 @@
   
 .category-image-container {
     position: relative; /* устанавливаем относительное позиционирование */
-    width: 100px; /* задаем размер контейнера для изображения */
-    height: 100px; /* задаем размер контейнера для изображения */
+    width: 100%; /* задаем размер контейнера для изображения */
+    height: 100%; /* задаем размер контейнера для изображения */
     margin: 0 auto; /* центрируем контейнер */
 } 
   
@@ -19,8 +19,7 @@
 .category-caption {
     display: block;
     width: 100%; /* ширина текста равна ширине родительского контейнера */
-    background-color: rgba(0, 0, 0, 0.5); /* добавляем небольшой прозрачный фон */
-    color: #fff; /* цвет текста белый */
+    color: black; /* цвет текста белый */
     padding: 5px; /* добавляем небольшие отступы вокруг текста */
     margin: 0; /* убираем внешние отступы */
     text-align: center; /* выравниваем текст по центру */
