--- a/src/Components/css/MenuCatalog.css
+++ b/src/Components/css/MenuCatalog.css
@@ -1,10 +1,46 @@
 .pagetitle {
     font-size: 20px;
 }
-.menuleft{
+.menu-left{
+    margin-left: 10px;
     font-size: 8px;
+    flex-grow: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
 }
 
-.item-catalog{
-    font-size: 8px;
+.menu-right{
+    flex-grow: 7;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 4 карточки в строке */
+    gap: 50px; /* Уменьшенный отступ между карточками */
 }
+
+.menu-right .category-image-container {
+    height: 35%;
+    width: 35%;
+}
+
+.item-catalog a{
+    font-size: 16px;
+}
+
+.catalogmain {
+    display: flex;
+    flex-flow: nowrap;
+}
+
+.caption{
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 15px;
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+
+
