--- a/src/Components/css/ProductCard.css
+++ b/src/Components/css/ProductCard.css
@@ -67,3 +67,9 @@
   .order-btn:hover {
     background-color: #0056b3;
   }
+
+  .product-quantity {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #555;
+  }
